fix: entities upd